# boids

./: Cargo.toml
.github/workflows/: rust.yml
benches/: boid_update.rs  struct_copy.rs
src/: app.rs  boids.rs  container.rs  drawable.rs  formation.rs  formations.rs  interaction.rs  lib.rs  main.rs  ops.rs  player.rs  traits.rs  units.rs  world.rs
