[package]
name = "boids"
version = "0.1.0"
authors = ["Виталий Артемьев <vitaly.artemiev@yandex.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
array2d = "0.2.1"
petgraph = "0.5.1"
rand = "0.8.3"
derive_more = "0.99.14"

soa_derive = "0.10.0"

piston = "0.53.0"
piston2d-graphics = "0.40.0"
pistoncore-glutin_window = "0.69.0"
piston2d-opengl_graphics = "0.78.0"

[dev-dependencies]
quickcheck = "1.0.3"