[package]
name = "boids"
version = "0.1.0"
authors = ["Виталий Артемьев <vitaly.artemiev@yandex.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
derive_more = "0.99.17"
lazy_static = "1.4.0"
serde = { version = "1.0.136", features = ["derive"] }

array2d = "0.2.1"
petgraph = "0.6.0"

soa_derive = "0.11.0"
#soak

piston = "0.53.1"
piston2d-graphics = "0.42.0"
pistoncore-glutin_window = "0.69.0"
piston2d-opengl_graphics = "0.81.0"

[dev-dependencies]
quickcheck = "1.0.3"
#proptest may be better